# unorder

./: Cargo.toml  tailwind.config.js
script/: download  tw-dev
src/: auth.rs  layout.rs  lib.rs  main.rs  orders.rs
src/views/: form.rs
templates/: auth.html  bun.lockb  home.html  layout.html  orders.html  package.json  tailwind.config.js
