[package]
name = "unorder"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.7"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
http-body-util = "0.1.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tower-service = "0.3.3"
